# ai-deskpet

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  VERSIONING.md  docker-compose.yml  启动后端.bat  新建文件夹.rar
.github/workflows/: release.yml
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  main.py
docs/: ai-pipeline.md  api-reference.md  architecture.md  database-schema.md  dependencies.md  deployment.md  pet-system-design.md
frontend/: .gitignore  .npmrc  LICENSE  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.electron.json  tsconfig.json  vite.config.ts
frontend/electron/: main.ts  preload.ts
scripts/: migrate.sh  release.ps1  seed-data.py  setup-dev.sh
新建文件夹/backend/: Dockerfile  pyproject.toml
新建文件夹/backend/app/: dependencies.py  main.py
新建文件夹/backend/app/ai/: model_registry.py  pixel_art_prompt.py
新建文件夹/backend/app/api/v1/: generation.py  pets.py  router.py  settings.py  users.py
新建文件夹/backend/app/core/: cache.py  database.py
新建文件夹/backend/app/models/: chat.py  generation.py  user.py
新建文件夹/backend/app/schemas/: user.py
新建文件夹/backend/app/services/: embedding_service.py  generation_service.py  memory_service.py  pet_service.py
新建文件夹/backend/app/storage/: local.py  s3.py
新建文件夹/backend/app/worker/: celery_app.py  generation_tasks.py  memory_tasks.py
新建文件夹/backend/tests/: conftest.py
新建文件夹/backend/tests/test_api/: test_chat.py  test_pets.py
新建文件夹/backend/tests/test_core/: test_database.py
新建文件夹/backend/tests/test_services/: test_memory_service.py
(+214 files in other folders)
