[project]
name = "ai-deskpet-backend"
version = "1.0.0"
description = "AI DeskPet Backend Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.1",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "Pillow>=10.4.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
